[package]
name = "rslox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.11"

[features]
debug_trace_execution = []
debug_print_code = []
# default=["debug_trace_execution", "debug_print_code"]